
linux-image (linux-3.2.55-mempo-0.1.27) UNRELEASED; urgency=low

  * updated to linux-3.2.55
  * updated to grsecurity-3.0-3.2.55-201402152203.patch
  * v0.1.27-wip
  * print date at end
  * cosmetics; changelog
  * v0.1.27-rc1

 -- mempo <mempo@mempo.org>  Thu, 17 Mon 2014 00:30:00 +0200

linux-image (linux-3.2.54-mempo-0.1.26) UNRELEASED; urgency=low

  * updated to grsecurity-3.0-3.2.54-201402111745.patch
  * v0.1.26-wip
  * Removed build-id from all binaries in headers deb package (mempo patch)
  * doc (changelog)
  * v0.1.26-rc2
  * added tools for setfattr
  * checking of exact version of libc, gcc, etc
  * v0.1.26-rc3
  * doc - contact, PGP, trust etc
  * v0.1.26-rc4
  * copy dpkg status from global to local
  * v0.1.26-rc5
  * delete deb before, check sha after; mirror [doc]
  * allow dpkg status copy failure to be ignored (for testing)
  * v0.1.26-rc6

 -- mempo <mempo@mempo.org>  Thu, 13 Feb 2014 17:00:00 +0200

linux-image (linux-3.2.54-mempo-0.1.25) UNRELEASED; urgency=low
  * date upgraded now since grsecurity was updated
  * v0.1.25-rc1
  * requiring dpkg 0.1.24.5 that really fixes crc (fix: one of args=0)
  * v0.1.25-rc2
 -- mempo <mempo@mempo.org>  Mon, 03 Feb 2014 12:00:00 +0200

linux-image (linux-3.2.54-mempo-0.1.24) UNRELEASED; urgency=low

  * updated to grsecurity-3.0-3.2.54-201401281850.patch
  * requiring dpkg 0.1.23.7 that fixes XZ compression level
  * v0.1.24-rc1
  * missing files added to git
  * v0.1.24-rc2
  * requiring dpkg 0.1.24.3 (bugfix) with correct XZ compression
  * updated to grsecurity-3.0-3.2.54-201402062221.patch
  * v0.1.24-rc3
  * (info) date, numbering

 -- mempo <mempo@mempo.org>  Mon, 03 Feb 2014 12:00:00 +0200

linux-image (linux-3.2.54-mempo-0.1.23) UNRELEASED; urgency=low

  * updated to grsecurity-3.0-3.2.54-201401281850.patch
  * doc updates etc
  * v0.1.23-rc1
  * testing dpkg version, we need 0.1.23
  * corrected this change log version entry
  * XZ crc options fix