@@ -108100,8 +108100,8 @@ index 0000000..7514850
 @@ -0,0 +1,8 @@
 +#!/bin/sh
 +
-+if [ ! -f "$1" ]; then
-+	SEED=`od -A n -t x8 -N 32 /dev/urandom | tr -d ' \n'`
++if [ ! -f "$1" ]; then ; echo " * Using rand seed from $MEMPO_RAND_SEED_FILE"
++	SEED=`od -A n -t x8 -N 32 $MEMPO_RAND_SEED_FILE | tr -d ' \n'`
 +	echo "const char *randstruct_seed = \"$SEED\";" > "$1"
 +	HASH=`echo -n "$SEED" | sha256sum | cut -d" " -f1 | tr -d ' \n'`
 +	echo "#define RANDSTRUCT_HASHED_SEED \"$HASH\"" > "$2"
